# SmartMoneyTrader

./: .replit  package-lock.json  package.json  pyproject.toml  python_server.py  replit.md  run_backend.py  run_frontend.py  start_python_backend.sh  start_python_stack.py  test_full_system.js  test_telegram_signal.js
attached_assets/: Pasted--DOMException-name-SyntaxError-message-An-invalid-or-illegal-string-was-specified-code-12--1752622137188_1752622137188.txt  Pasted--Enhance-the-trading-app-s-efficiency-and-accuracy-by-implementing-the-following-upgrades-and-int-1752707128361_1752707128361.txt  Pasted-Based-on-the-technical-requirements-and-performance-goals-of-your-trading-app-especially-around-real-1752708257660_1752708257660.txt  Pasted-Build-a-full-stack-application-that-performs-automated-algorithmic-trading-based-on-the-Smart-Money--1752534550563_1752534550564.txt
backend/: main.py
backend/app/: __init__.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/models/: trading_models.py
backend/services/: database.py  market_data.py  ml_pattern_recognition.py  smc_detection.py  trading.py  websocket_manager.py
client/src/: App.tsx  index.css
frontend/: index.html  main.py
server/: db.ts  index.ts  routes.ts  storage.ts
server/services/: alertService.ts  backtesting.ts  demoBroker.ts  enhancedSignalDetection.ts  marketData.ts  marketHours.ts  mlPatternRecognition.ts  smcDetection.ts  technicalAnalysis.ts  telegramNotification.ts  topDownAnalysis.ts  topDownAnalysisService.ts  trading.ts
shared/: schema.ts
(+43 files in other folders)
