[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "backtrader>=1.9.78.123",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "aiohttp>=3.12.14",
    "streamlit>=1.47.0",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "websocket-client>=1.8.0",
    "streamlit-autorefresh>=1.0.1",
]
